--- a/style.css
+++ b/style.css
@@ -6,6 +6,23 @@
     font-family: 'Poppins', sans-serif;
 }
 
+
+.title {
+    font-weight: 700;
+    font-size: 52px;
+}
+
+.description {
+    color: #3A3A3A;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+
+
+/* nav sectin start */
+
+
 nav {
     margin: 50px 120px;
     display: flex;
@@ -31,40 +48,199 @@ nav div ul li a {
 
 }
 
+
+/* banner section strat */
+
+
 .banner {
     display: flex;
     align-items: center;
     margin: 0 120px 80px 120px;
 }
 
-.banner-title {
-    font-weight: 700;
-    font-size: 52px;
-}
 
-.banner-desc {
-    color: #3A3A3A;
-    font-weight: 600;
-    font-size: 16px;
-}
-.banner-left button{
+.banner-left button {
     background: #E02C6D;
-border-radius: 41px;
-padding: 10px 20px;
-margin-top: 25px;
-color: white;
-border: none;
+    border-radius: 41px;
+    padding: 10px 20px;
+    margin-top: 25px;
+    color: white;
+    border: none;
 }
 
 
 /* sponsor-sec */
 
-.sponsor-sec{
-    margin: 0 160px;
-    
+.sponsor-sec {
+    margin: 100px 160px;
+
 }
-.sponsor{
-   display: flex;
+
+.sponsor {
+    display: flex;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-between;
+}
+
+
+/* Popular Collection strat */
+
+.popular-collection-sec {
+    margin: 0 190px;
+}
+
+.section-title {
+    text-align: center;
+    color: #3A3A3A;
+    font-weight: 600;
+    font-size: 28px;
+}
+
+.collection-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    margin: 30px;
+}
+
+.card {
+    margin: 20px 15px;
+    padding: 15px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    gap: 120px;
+}
+
+.card-title {
+    color: #18191F;
+    font-weight: 500;
+    font-size: 28px;
+}
+
+.card-price {
+    color: rgba(0, 0, 0, 0.87);
+    font-weight: 400;
+    font-size: 24px;
+}
+
+
+.fa-star,
+.fa-star-half-stroke {
+    color: #FB8200;
+    margin: 10px 0;
+}
+
+.card-description {
+    color: #787885;
+    font-weight: 600;
+font-size: 14px;
+}
+
+.see-more-btn{
+ text-align: right;
+}
+.see-more-btn a{
+    text-decoration: none;
+    color: rgba(224, 44, 109, 0.87);
+   
+}
+
+
+
+
+/* Popular Collection end */
+
+
+
+
+
+
+
+
+
+
+
+
+/* responsive section strat */
+
+@media screen and (max-width:576px) {
+
+
+    .responsive,
+    nav div ul, .collection-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .title {
+        font-weight: 700;
+        font-size: 40px;
+    }
+
+    /* nav section responsive */
+
+
+    nav {
+        margin: 30px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    /* banner section responsive */
+
+
+
+    .banner-left {
+        order: 2;
+    }
+
+    .banner-right {
+        order: 1;
+    }
+
+    .banner-right img {
+        width: 100%;
+    }
+
+
+    /* sponsor section responsive */
+
+    .sponsor-sec {
+
+        margin: 50px;
+
+    }
+
+    .sponsor {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+        justify-content: space-between;
+    }
+
+
+    /* Popular Collection strat */
+
+
+    .popular-collection-sec {
+        margin:20px;
+    }
+    
+
+    .card {
+       
+        margin: 20px 15px;
+        padding: 15px;
+       
+    }
+
+    
+
+
+
+
+
+
+
 }
