--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ margin-bottom: 20px;
 
 
 footer{
-    background: #AAAAAA;
+    background: #251B37;
     text-align: center;
     padding: 50px 0;
 }
@@ -193,6 +193,7 @@ font-size: 14px;
 .footer-icon i{
     font-size: 30px;
     margin: 15px;
+    color: #FFFFFF;
 }
 
 
@@ -272,12 +273,22 @@ font-size: 14px;
         padding: 15px;
        
     }
+    .card img{
+        width: 100%;
+    }
 
     /* feature-section strat */
 
 
     .feature-section{
         margin: 50px;
+    }
+
+    .feature-section-left{
+       margin: 20px ;
+    }
+    .feature-section-left img{
+       width: 100%;
     }
 
 
